[tool.black]
line-length = 99

[tool.isort]
line-length = 99

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest tests"
lint = "pyright src tests"
build-docs = "sphinx-build docs/source docs/build"

[tool.pdm.package-dir]
highwire = "src/highwire"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.384",
    "sphinx>=8.1.0",
    "sphinx-rtd-theme>=3.0.1",
]
[project]
name = "highwire"
version = "0.7.0"
description = ""
authors = [
    {name = "Bart Frenk", email = "bart.frenk@gmail.com"},
]
dependencies = [
    "setuptools>=75.1.0",
    "pydantic==2.*",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = [""]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://gitlab.com/greenhousegroup/ai/libraries/highwire/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
