[tool.black]
line-length = 99

[tool.isort]
line-length = 99

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest tests"
lint = "pyright src tests"
build-docs = "sphinx-build docs/source docs/build"
set-version = {shell = "pdm version $(git describe --tags | sed -n -r 's/v([^-]+).*/\\1/p')"}
qa.composite = ["test", "lint"]
qa.keep_going = true

[tool.pdm.build]
source-includes = ["docs/source/description.rst"]

[tool.pdm.package-dir]
highwire = "src/highwire"

[tool.pdm.build.wheel-data]
data = ["docs/source/description.rst"]

[project]
name = "highwire"
version = "0.7.0"
description = "A simple FRP library"
authors = [
    {name = "Bart Frenk", email = "bart.frenk@gmail.com"},
]
dependencies = [
    "pydantic==2.*",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = [""]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://gitlab.com/greenhousegroup/ai/libraries/highwire/"

[project.optional-dependencies]
lint = [
    "pyright>=1.1.384",
]
docs = [
    "sphinx>=8.1.0",
    "sphinx-rtd-theme>=3.0.1",
]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
